// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/TableDetailWizard Stateful example 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="TableDetailWizard__StyledWizardWrapper-sc-15frmjo-0 fotMIZ"
    >
      <div
        className="TableDetailWizardHeader__StyledDivWizardHeader-sc-1pa3n63-0 hKHZJV"
      >
        <h2
          className="TableDetailWizardHeader__StyledDivHeading-sc-1pa3n63-1 eKyans"
        >
          Create Physical Interface
        </h2>
        <div
          className="TableDetailWizardHeader__StyledButton-sc-1pa3n63-2 jNjnLX"
        >
          <button
            className="bx--btn bx--btn--ghost"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <svg
              aria-hidden={true}
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="TableDetailWizard__StyledWizardContainer-sc-15frmjo-1 kjwloH"
      >
        <div
          className="TableDetailWizardSidebar__StyledDivWizardHeader-sc-1wxoi33-0 iAqtjs"
        >
          <div
            className="WizardSidebar__StyledSidebar-sc-1bufur3-0 hklDaT"
            width={250}
          >
            <ul
              className="iot--progress-indicator iot--progress-indicator--vertical"
              data-testid="iot-progress-indicator-testid"
              onChange={[Function]}
            >
              <li
                className="step-current"
              >
                <button
                  aria-disabled={false}
                  className="step-button main-step"
                  data-testid="step-button-main-identity"
                  disabled={false}
                  onClick={null}
                  onKeyDown={null}
                  style={
                    Object {
                      "height": "7rem",
                      "minHeight": "7rem",
                    }
                  }
                  type="button"
                >
                  <div
                    className="line"
                  />
                  <span
                    className="icon"
                    title="Identity"
                  >
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="16"
                        cy="16"
                        r="10"
                      />
                      <path
                        d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
                      />
                      <text
                        dominantBaseline="middle"
                        id="icon-numbered"
                        textAnchor="middle"
                        x="50%"
                        y="55%"
                      >
                        1
                      </text>
                    </svg>
                  </span>
                  <div
                    className="label-container"
                  >
                    <p
                      className="label"
                      value="Identity"
                    >
                      Identity
                    </p>
                  </div>
                </button>
              </li>
              <li
                className="step-incomplete"
              >
                <button
                  aria-disabled={false}
                  className="step-button main-step clickable"
                  data-testid="step-button-main-state-model"
                  disabled={false}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    Object {
                      "height": "7rem",
                      "minHeight": "7rem",
                    }
                  }
                  type="button"
                >
                  <div
                    className="line"
                  />
                  <span
                    className="icon"
                    title="State Model"
                  >
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                      />
                      <text
                        dominantBaseline="middle"
                        id="icon-numbered"
                        textAnchor="middle"
                        x="50%"
                        y="55%"
                      >
                        2
                      </text>
                    </svg>
                  </span>
                  <div
                    className="label-container"
                  >
                    <p
                      className="label"
                      value="State Model"
                    >
                      State Model
                    </p>
                  </div>
                </button>
              </li>
              <li
                className="step-incomplete"
              >
                <button
                  aria-disabled={false}
                  className="step-button main-step clickable"
                  data-testid="step-button-main-notifications"
                  disabled={false}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    Object {
                      "height": "7rem",
                      "minHeight": "7rem",
                    }
                  }
                  type="button"
                >
                  <div
                    className="line"
                  />
                  <span
                    className="icon"
                    title="Notifications"
                  >
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                      />
                      <text
                        dominantBaseline="middle"
                        id="icon-numbered"
                        textAnchor="middle"
                        x="50%"
                        y="55%"
                      >
                        3
                      </text>
                    </svg>
                  </span>
                  <div
                    className="label-container"
                  >
                    <p
                      className="label"
                      value="Notifications"
                    >
                      Notifications
                    </p>
                  </div>
                </button>
              </li>
              <li
                className="step-incomplete"
              >
                <button
                  aria-disabled={false}
                  className="step-button main-step clickable"
                  data-testid="step-button-main-final-step"
                  disabled={false}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    Object {
                      "height": "7rem",
                      "minHeight": "7rem",
                    }
                  }
                  type="button"
                >
                  <span
                    className="icon"
                    title="Final step"
                  >
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                      />
                      <text
                        dominantBaseline="middle"
                        id="icon-numbered"
                        textAnchor="middle"
                        x="50%"
                        y="55%"
                      >
                        4
                      </text>
                    </svg>
                  </span>
                  <div
                    className="label-container"
                  >
                    <p
                      className="label"
                      value="Final step"
                    >
                      Final step
                    </p>
                  </div>
                </button>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="TableDetailWizard__StyledContentContainer-sc-15frmjo-4 hxUSxO"
        >
          <div>
            <div
              style={
                Object {
                  "backgroundColor": "#eaeaea",
                }
              }
            >
              <div>
                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, corrupti laboriosam, culpa similique quae dolorum provident vitae iusto at velit dignissimos reiciendis maiores voluptate fugit dolore harum unde laborum facilis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Et soluta placeat explicabo! Necessitatibus id neque accusantium molestiae officiis ducimus! Suscipit quae perferendis officiis vel, magnam est error! Vel, accusantium quas enim inventore natus adipisci autem at modi dolores assumenda mollitia ut facilis, deleniti aspernatur? Fuga at in expedita tempora cum quasi nemo neque alias id ullam omnis similique placeat provident, eum totam itaque perferendis, reiciendis laboriosam ducimus sunt facilis amet? Cupiditate voluptatem et, voluptas maxime sunt possimus repudiandae nisi necessitatibus?
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="TableDetailWizard__StyledFooter-sc-15frmjo-3 dZaQHZ"
      >
        <div
          className="bx--modal-footer"
        >
          <div
            className="WizardFooter__StyledFooterButtons-sc-18uwrwe-0 jSocgX"
          >
            <button
              className="iot--btn bx--btn bx--btn--secondary"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              type="button"
            >
              Cancel
            </button>
            <button
              className="iot--btn bx--btn bx--btn--primary"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              type="button"
            >
              Next
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/TableDetailWizard Static 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="TableDetailWizard__StyledWizardWrapper-sc-15frmjo-0 fotMIZ"
    >
      <div
        className="TableDetailWizardHeader__StyledDivWizardHeader-sc-1pa3n63-0 hKHZJV"
      >
        <h2
          className="TableDetailWizardHeader__StyledDivHeading-sc-1pa3n63-1 eKyans"
        >
          Create Physical Interface
        </h2>
        <div
          className="TableDetailWizardHeader__StyledButton-sc-1pa3n63-2 jNjnLX"
        >
          <button
            className="bx--btn bx--btn--ghost"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <svg
              aria-hidden={true}
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="TableDetailWizard__StyledWizardContainer-sc-15frmjo-1 kjwloH"
      >
        <div
          className="TableDetailWizardSidebar__StyledDivWizardHeader-sc-1wxoi33-0 iAqtjs"
        >
          <div
            className="WizardSidebar__StyledSidebar-sc-1bufur3-0 hklDaT"
            width={250}
          >
            <ul
              className="iot--progress-indicator iot--progress-indicator--vertical"
              data-testid="iot-progress-indicator-testid"
              onChange={[Function]}
            >
              <li
                className="step-complete"
              >
                <button
                  aria-disabled={false}
                  className="step-button main-step"
                  data-testid="step-button-main-identity"
                  disabled={false}
                  onClick={null}
                  onKeyDown={null}
                  style={
                    Object {
                      "height": "7rem",
                      "minHeight": "7rem",
                    }
                  }
                  type="button"
                >
                  <div
                    className="line-complete"
                  />
                  <span
                    className="icon"
                    title="Identity"
                  >
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                      />
                      <path
                        d="M14 21.5L9 16.54 10.59 14.97 14 18.35 21.41 11 23 12.58 14 21.5z"
                      />
                    </svg>
                  </span>
                  <div
                    className="label-container"
                  >
                    <p
                      className="label"
                      value="Identity"
                    >
                      Identity
                    </p>
                  </div>
                </button>
              </li>
              <li
                className="step-current"
              >
                <button
                  aria-disabled={false}
                  className="step-button main-step"
                  data-testid="step-button-main-state-model"
                  disabled={false}
                  onClick={null}
                  onKeyDown={null}
                  style={
                    Object {
                      "height": "7rem",
                      "minHeight": "7rem",
                    }
                  }
                  type="button"
                >
                  <div
                    className="line"
                  />
                  <span
                    className="icon"
                    title="State Model"
                  >
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="16"
                        cy="16"
                        r="10"
                      />
                      <path
                        d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
                      />
                      <text
                        dominantBaseline="middle"
                        id="icon-numbered"
                        textAnchor="middle"
                        x="50%"
                        y="55%"
                      >
                        2
                      </text>
                    </svg>
                  </span>
                  <div
                    className="label-container"
                  >
                    <p
                      className="label"
                      value="State Model"
                    >
                      State Model
                    </p>
                  </div>
                </button>
              </li>
              <li
                className="step-incomplete"
              >
                <button
                  aria-disabled={false}
                  className="step-button main-step"
                  data-testid="step-button-main-notifications"
                  disabled={false}
                  onClick={null}
                  onKeyDown={null}
                  style={
                    Object {
                      "height": "7rem",
                      "minHeight": "7rem",
                    }
                  }
                  type="button"
                >
                  <div
                    className="line"
                  />
                  <span
                    className="icon"
                    title="Notifications"
                  >
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                      />
                      <text
                        dominantBaseline="middle"
                        id="icon-numbered"
                        textAnchor="middle"
                        x="50%"
                        y="55%"
                      >
                        3
                      </text>
                    </svg>
                  </span>
                  <div
                    className="label-container"
                  >
                    <p
                      className="label"
                      value="Notifications"
                    >
                      Notifications
                    </p>
                  </div>
                </button>
              </li>
              <li
                className="step-incomplete"
              >
                <button
                  aria-disabled={false}
                  className="step-button main-step"
                  data-testid="step-button-main-final-step"
                  disabled={false}
                  onClick={null}
                  onKeyDown={null}
                  style={
                    Object {
                      "height": "7rem",
                      "minHeight": "7rem",
                    }
                  }
                  type="button"
                >
                  <span
                    className="icon"
                    title="Final step"
                  >
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                      />
                      <text
                        dominantBaseline="middle"
                        id="icon-numbered"
                        textAnchor="middle"
                        x="50%"
                        y="55%"
                      >
                        4
                      </text>
                    </svg>
                  </span>
                  <div
                    className="label-container"
                  >
                    <p
                      className="label"
                      value="Final step"
                    >
                      Final step
                    </p>
                  </div>
                </button>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="TableDetailWizard__StyledContentContainer-sc-15frmjo-4 hxUSxO"
        >
          <div>
            <div
              style={
                Object {
                  "backgroundColor": "#dceadd",
                  "padding": "70px 30px",
                }
              }
            >
              <div>
                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum mollitia repellendus assumenda fuga inventore nisi, minus optio ullam voluptas eveniet dolore dolorem vitae, neque suscipit labore at. Voluptatum, nobis perferendis!
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="TableDetailWizard__StyledFooter-sc-15frmjo-3 dZaQHZ"
      >
        <div
          className="bx--modal-footer"
        >
          <div
            className="WizardFooter__StyledFooterButtons-sc-18uwrwe-0 jSocgX"
          >
            <button
              className="iot--btn bx--btn bx--btn--secondary"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              type="button"
            >
              Back
            </button>
            <button
              className="iot--btn bx--btn bx--btn--primary"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              type="button"
            >
              Next
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/TableDetailWizard with error 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="TableDetailWizard__StyledWizardWrapper-sc-15frmjo-0 fotMIZ"
    >
      <div
        className="TableDetailWizardHeader__StyledDivWizardHeader-sc-1pa3n63-0 hKHZJV"
      >
        <h2
          className="TableDetailWizardHeader__StyledDivHeading-sc-1pa3n63-1 eKyans"
        >
          Create Physical Interface
        </h2>
        <div
          className="TableDetailWizardHeader__StyledButton-sc-1pa3n63-2 jNjnLX"
        >
          <button
            className="bx--btn bx--btn--ghost"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <svg
              aria-hidden={true}
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="TableDetailWizard__StyledWizardContainer-sc-15frmjo-1 kjwloH"
      >
        <div
          className="TableDetailWizardSidebar__StyledDivWizardHeader-sc-1wxoi33-0 iAqtjs"
        >
          <div
            className="WizardSidebar__StyledSidebar-sc-1bufur3-0 hklDaT"
            width={250}
          >
            <ul
              className="iot--progress-indicator iot--progress-indicator--vertical"
              data-testid="iot-progress-indicator-testid"
              onChange={[Function]}
            >
              <li
                className="step-current"
              >
                <button
                  aria-disabled={false}
                  className="step-button main-step"
                  data-testid="step-button-main-identity"
                  disabled={false}
                  onClick={null}
                  onKeyDown={null}
                  style={
                    Object {
                      "height": "7rem",
                      "minHeight": "7rem",
                    }
                  }
                  type="button"
                >
                  <div
                    className="line"
                  />
                  <span
                    className="icon"
                    title="Identity"
                  >
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="16"
                        cy="16"
                        r="10"
                      />
                      <path
                        d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
                      />
                      <text
                        dominantBaseline="middle"
                        id="icon-numbered"
                        textAnchor="middle"
                        x="50%"
                        y="55%"
                      >
                        1
                      </text>
                    </svg>
                  </span>
                  <div
                    className="label-container"
                  >
                    <p
                      className="label"
                      value="Identity"
                    >
                      Identity
                    </p>
                  </div>
                </button>
              </li>
              <li
                className="step-incomplete"
              >
                <button
                  aria-disabled={false}
                  className="step-button main-step"
                  data-testid="step-button-main-state-model"
                  disabled={false}
                  onClick={null}
                  onKeyDown={null}
                  style={
                    Object {
                      "height": "7rem",
                      "minHeight": "7rem",
                    }
                  }
                  type="button"
                >
                  <div
                    className="line"
                  />
                  <span
                    className="icon"
                    title="State Model"
                  >
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                      />
                      <text
                        dominantBaseline="middle"
                        id="icon-numbered"
                        textAnchor="middle"
                        x="50%"
                        y="55%"
                      >
                        2
                      </text>
                    </svg>
                  </span>
                  <div
                    className="label-container"
                  >
                    <p
                      className="label"
                      value="State Model"
                    >
                      State Model
                    </p>
                  </div>
                </button>
              </li>
              <li
                className="step-incomplete"
              >
                <button
                  aria-disabled={false}
                  className="step-button main-step"
                  data-testid="step-button-main-notifications"
                  disabled={false}
                  onClick={null}
                  onKeyDown={null}
                  style={
                    Object {
                      "height": "7rem",
                      "minHeight": "7rem",
                    }
                  }
                  type="button"
                >
                  <div
                    className="line"
                  />
                  <span
                    className="icon"
                    title="Notifications"
                  >
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                      />
                      <text
                        dominantBaseline="middle"
                        id="icon-numbered"
                        textAnchor="middle"
                        x="50%"
                        y="55%"
                      >
                        3
                      </text>
                    </svg>
                  </span>
                  <div
                    className="label-container"
                  >
                    <p
                      className="label"
                      value="Notifications"
                    >
                      Notifications
                    </p>
                  </div>
                </button>
              </li>
              <li
                className="step-incomplete"
              >
                <button
                  aria-disabled={false}
                  className="step-button main-step"
                  data-testid="step-button-main-final-step"
                  disabled={false}
                  onClick={null}
                  onKeyDown={null}
                  style={
                    Object {
                      "height": "7rem",
                      "minHeight": "7rem",
                    }
                  }
                  type="button"
                >
                  <span
                    className="icon"
                    title="Final step"
                  >
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                      />
                      <text
                        dominantBaseline="middle"
                        id="icon-numbered"
                        textAnchor="middle"
                        x="50%"
                        y="55%"
                      >
                        4
                      </text>
                    </svg>
                  </span>
                  <div
                    className="label-container"
                  >
                    <p
                      className="label"
                      value="Final step"
                    >
                      Final step
                    </p>
                  </div>
                </button>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="TableDetailWizard__StyledContentContainer-sc-15frmjo-4 hxUSxO"
        >
          <div>
            <div
              style={
                Object {
                  "backgroundColor": "#eaeaea",
                }
              }
            >
              <div>
                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, corrupti laboriosam, culpa similique quae dolorum provident vitae iusto at velit dignissimos reiciendis maiores voluptate fugit dolore harum unde laborum facilis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Et soluta placeat explicabo! Necessitatibus id neque accusantium molestiae officiis ducimus! Suscipit quae perferendis officiis vel, magnam est error! Vel, accusantium quas enim inventore natus adipisci autem at modi dolores assumenda mollitia ut facilis, deleniti aspernatur? Fuga at in expedita tempora cum quasi nemo neque alias id ullam omnis similique placeat provident, eum totam itaque perferendis, reiciendis laboriosam ducimus sunt facilis amet? Cupiditate voluptatem et, voluptas maxime sunt possimus repudiandae nisi necessitatibus?
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="TableDetailWizard__StyledMessageBox-sc-15frmjo-2 bHjJtp bx--inline-notification bx--inline-notification--error"
        kind="error"
        role="alert"
      >
        <div
          className="bx--inline-notification__details"
        >
          <svg
            aria-hidden={true}
            className="bx--inline-notification__icon"
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 20 20"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10,1c-5,0-9,4-9,9s4,9,9,9s9-4,9-9S15,1,10,1z M13.5,14.5l-8-8l1-1l8,8L13.5,14.5z"
            />
            <path
              d="M13.5,14.5l-8-8l1-1l8,8L13.5,14.5z"
              data-icon-path="inner-path"
              opacity="0"
            />
            <title>
              error icon
            </title>
          </svg>
          <div
            className="bx--inline-notification__text-wrapper"
          >
            <p
              className="bx--inline-notification__title"
            >
              Error on the form
            </p>
            <div
              className="bx--inline-notification__subtitle"
            >
              
            </div>
          </div>
        </div>
        <button
          aria-label="closes notification"
          className="bx--inline-notification__close-button"
          onClick={[Function]}
          title="closes notification"
          type="button"
        >
          <svg
            aria-label="close notification"
            className="bx--inline-notification__close-icon"
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
            />
          </svg>
        </button>
      </div>
      <div
        className="TableDetailWizard__StyledFooter-sc-15frmjo-3 dZaQHZ"
      >
        <div
          className="bx--modal-footer"
        >
          <div
            className="WizardFooter__StyledFooterButtons-sc-18uwrwe-0 jSocgX"
          >
            <button
              className="iot--btn bx--btn bx--btn--secondary"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              type="button"
            >
              Cancel
            </button>
            <button
              className="iot--btn bx--btn bx--btn--primary"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              type="button"
            >
              Next
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
